[project]
name = "nfl-predictor"
version = "0.1.0"
description = "A WebApp written in python that predicts the outcome of a given NFL game, with weight given to variables such as weather, playing surfice etc."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nflreadpy>=0.1.5",
    "polars>=1.38.1",
]
